--- a/index.html
+++ b/index.html
@@ -4,13 +4,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard</title>
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
 
     <link rel="stylesheet" href="/css/styles.css">
+
+    <script src="/js/admin.js" defer></script>
 </head>
 <body>
     
     <h1>Admin Dashboard</h1>
 
-    <script src="/js/admin.js"></script>
+    <div class="container-fluid">
+        <div class="row g-0">
+
+            <div class="col-12 col-lg-4">
+                <div class="user-form bg-primary-subtle">
+                    FORMULARIO DE CARGA DE USUARIOS
+                </div>
+            </div>
+
+            <div class="col-12 col-lg-8">
+                <div class="user-list bg-info-subtle" id="table-container">
+                    <table class="user-table table table-dark table-striped">
+                        <thead>
+                          <tr>
+                            <th scope="col">Avatar</th>
+                            <th scope="col">Nombre Completo</th>
+                            <th scope="col">Email</th>
+                            <th scope="col">Localidad</th>
+                            <th scope="col">Acciones</th>
+                          </tr>
+                        </thead>
+                        <tbody id="table-body"></tbody>
+                      </table>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <!-- <script src="/js/admin.js"></script> -->
 </body>
 </html>
