--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     
-    <h1>Admin Dashboard</h1>
+    <h1 class="bg-primary text-white p-2">Admin Dashboard</h1>
 
     <div class="container-fluid">
         <div class="row g-0">
