--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
-    
+
     <!-- #Sweetalert -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
@@ -31,7 +31,63 @@
 
             <div class="col-12 col-lg-4">
                 <div class="user-form bg-primary-subtle">
-                    FORMULARIO DE CARGA DE USUARIOS
+                    <h2 class="fs-4">
+                        CARGA DE USUARIOS
+                    </h2>
+                    <form class="p-2 user-form" id="user-form">
+                        <div class="mb-1">
+                            <label for="fullname" class="form-label">Nombre completo</label>
+                            <input type="text" name="fullname" class="form-control" id="fullname" required minlength="4" maxlength="80" value="Test">
+                        </div>
+                        <div class="mb-1">
+                            <label for="email" class="form-label">Correo Electrónico</label>
+                            <input type="email" name="email" class="form-control" id="email" value="test@gmail.com">
+                        </div>
+                        <div class="mb-1">
+                            <label for="password" class="form-label">Contraseña</label>
+                            <input type="password" name="password" class="form-control" id="password" value="1234">
+                        </div>
+                        <div class="mb-1">
+                            <label for="password-repeat" class="form-label">Repertir Contraseña</label>
+                            <input type="password" name="password-repeat" class="form-control" id="password-repeat" value="1234">
+                        </div>
+
+                        <div class="mb-1">
+                            <label for="bornDate" class="form-label">Fecha Nacimiento</label>
+                            <input type="date" name="bornDate" class="form-control" id="bornDate" value="2024-03-22">
+                        </div>
+
+                        <!-- <div class="mb-1">
+                            <label for="age" class="form-label">agen Perfil</label>
+                            <input type="number" name="age" class="form-control" id="age">
+                        </div> -->
+
+                        <div class="mb-1">
+                            <label for="image" class="form-label">Imagen Perfil</label>
+                            <input type="url" name="image" class="form-control" id="image" value="https://i.pinimg.com/736x/ca/cf/6c/cacf6ccc2507da9195fc4708ace75748.jpg">
+                        </div>
+
+                        <div class="mb-1">
+                            <label for="location" class="form-label">Localidad</label>
+                            <select name="location" id="location" class="form-select">
+                                <option selected>Seleccione Localidad</option>
+                                <option value="Buenos Aires">Buenos Aires</option>
+                                <option value="Córdoba" selected>Córdoba</option>
+                                <option value="Santa Fe">Santa Fe</option>
+                                <option value="Mendoza">Mendoza</option>
+                              </select>
+                        </div>
+
+                        <div class="mb-1">
+                            <input class="form-check-input" type="checkbox" name="active" id="active">
+                            <label class="form-check-label" for="active">
+                                Activo
+                            </label>
+                        </div>
+
+                        <button type="submit" class="btn btn-primary">Agregar</button>
+                    </form>
+
                 </div>
             </div>
 
@@ -67,6 +123,13 @@
                           </tr>
                         </thead>
                         <tbody id="table-body"></tbody>
+                        <tfoot>
+                            <tr>
+                                <td id="total" class="table-total" colspan="5">
+                                    $ 123213
+                                </td>
+                            </tr>
+                        </tfoot>
                       </table>
                 </div>
             </div>
