Editar usuario finalizado

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="container-fluid">
       <div class="row g-0">
         <div class="col-12 col-lg-4">
-          <div class="user-form bg-primary-subtle">
+          <div class="user-form-container bg-primary-subtle">
             <h2 class="fs-4">CARGA DE USUARIOS</h2>
             <form class="p-2 user-form" id="user-form">
               <div class="mb-1">
