Funciones de manejo de fechas

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
 
     <link rel="stylesheet" href="/css/styles.css" />
 
+
+    <script src="/js/utils/date.js"></script>
+
     <script src="/js/admin.js" defer></script>
   </head>
   <body>
@@ -179,13 +182,14 @@
                   <th scope="col">Nombre Completo</th>
                   <th scope="col">Email</th>
                   <th scope="col">Localidad</th>
+                  <th>Fecha Nacimiento</th>
                   <th scope="col">Acciones</th>
                 </tr>
               </thead>
               <tbody id="table-body"></tbody>
               <tfoot>
                 <tr>
-                  <td id="total" class="table-total" colspan="5">$ 123213</td>
+                  <td id="total" class="table-total" colspan="6">$ 123213</td>
                 </tr>
               </tfoot>
             </table>
