--- a/pages/login/login.html
+++ b/pages/login/login.html
@@ -23,12 +23,26 @@
     <!-- Cargamos nuestro archivo de estilos -->
     <link rel="stylesheet" href="/css/styles.css" />
     <!-- Nuestro script -->
-    <script src="/js/login.js"></script>
+    <script src="/js/login.js" defer></script>
   </head>
   <body>
     <div class="form-container">
       <form class="form-login" id="login">
         <h1>INGRESAR</h1>
+        <div class="mb-3">
+          <label for="email" class="form-label">Email address</label>
+          <input type="email" class="form-control" id="email" name="email" />
+        </div>
+        <div class="mb-3">
+          <label for="password" class="form-label">Password</label>
+          <input
+            type="password"
+            class="form-control"
+            id="password"
+            name="password"
+          />
+        </div>
+        <button type="submit" class="btn btn-dark">Submit</button>
       </form>
     </div>
   </body>
